# SynapseC

./: .gitignore  LICENSE  README.md
AndroidApp/app/: build.gradle.kts
AndroidApp/app/src/main/java/com/example/myapplication/: MainActivity.kt  NativeCore.kt
AndroidApp/app/src/main/res/layout/: activity_main.xml
AndroidApp/gradle/wrapper/: gradle-wrapper.properties
coreC/: CMakeLists.txt  build_android.sh  build_xcframework.sh  core_component.c  core_component_jni.c  main.c
coreC/build_sim_arm/programa_test.app/: Info.plist
coreC/build_xcf/headers/: module.modulemap
coreC/build_xcf/spm/: Package.swift
coreC/build_xcf/spm/CoreC.xcframework/: Info.plist
coreC/build_xcf/spm/CoreC.xcframework/ios-arm64/Headers/: core_component.h
iOSApp/iOSApp/: ContentView.swift  CoreCWrapper.swift  ValidadorComponente.swift  iOSAppApp.swift
